Update to use the int cluster while the summit is down

--- a/experiments/efd/Accessing_DM-EFD_data.ipynb
+++ b/experiments/efd/Accessing_DM-EFD_data.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = EfdClient('lab_efd')"
+    "client = EfdClient('int_efd')"
    ]
   },
   {
@@ -87,9 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t2 = Time.now()\n",
-    "t2 = t2.tai\n",
-    "t1 = t2 - TimeDelta(30*24*3600, format='sec', scale='tai')"
+    "t2 = Time('2020-03-16T12:00:00', scale='tai')\n",
+    "t1 = t2 - TimeDelta(15*24*3600, format='sec', scale='tai')"
    ]
   },
   {
