--- a/experiments/efd/Correlate Exposure and telemetry.ipynb
+++ b/experiments/efd/Correlate Exposure and telemetry.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = EfdClient('lab_efd')"
+    "client = EfdClient('int_efd')"
    ]
   },
   {
@@ -78,9 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t2 = Time.now()\n",
-    "t2 = t2.tai\n",
-    "t1 = t2 - TimeDelta(30*24*3600, format='sec', scale='tai')"
+    "t2 = Time('2020-03-15T12:00:00', scale='tai')\n",
+    "t1 = t2 - TimeDelta(24*3600, format='sec', scale='tai')"
    ]
   },
   {
@@ -172,8 +171,7 @@
    "outputs": [],
    "source": [
     "diff_df = pd.DataFrame(diff)\n",
-    "bins = [el/1. + 32.5 for el in range(10)]\n",
-    "diff_df.hist(bins=bins)"
+    "diff_df.hist(bins=50)"
    ]
   }
  ],
