--- a/experiments/efd/temperature_latency.ipynb
+++ b/experiments/efd/temperature_latency.ipynb
@@ -31,6 +31,7 @@
     "from matplotlib import pylab as plt\n",
     "from astropy.time import Time, TimeDelta\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from bokeh.plotting import figure, output_notebook, show\n",
     "from bokeh.models import LinearAxis, Range1d, Span, Label\n",
@@ -66,14 +67,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = EfdClient('summit_efd')"
+    "client = EfdClient('int_efd')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Specify a time range for data in `InfluxQL`.  This notebook looks at data from 7 days ago."
+    "Specify a time range. These must be `astropy.time` objects. We'll specify the end time and use an offset for the start time. This notebook looks at data for the 30 days before 20 March 2020."
    ]
   },
   {
@@ -82,8 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = Time.now()\n",
-    "t1 = t1.tai\n",
+    "t1 = Time('2020-03-20T00:00:00', scale='tai')\n",
     "window = TimeDelta(30*24*3600, format='sec', scale='tai')"
    ]
   },
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most operations work on `Timedelta` types, but not the `histogram` function, so we record the difference in seconds here."
+    "Most operations work on `Timedelta` types, but not the `histogram` function, so we record the difference in seconds here.  Also note that timestamps are actually in TAI, but pandas doesn't know about TAI.  Since we are only looking at time difference, it doesn't matter which system we choose (unless a leap second happens between two of our samples)."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "source": [
     "deltas = []\n",
     "for influx_stamp, snd_stamp in zip(tstamps.index.values, tstamps['private_sndStamp']):\n",
-    "    deltas.append((pd.Timestamp(influx_stamp, tz=\"GMT\") - pd.Timestamp(snd_stamp, unit='s', tz=\"GMT\")).total_seconds())"
+    "    deltas.append((pd.Timestamp(influx_stamp, tz=\"GMT\") - pd.Timestamp(snd_stamp - 37, unit='s', tz=\"GMT\")).total_seconds())"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist, edges = np.histogram(deltas, density=True, bins=np.linspace(deltas.min(), deltas.max(), 500))"
+    "hist, edges = np.histogram(deltas, density=True, bins=np.linspace(0, 5, 500))"
    ]
   },
   {
