--- a/experiments/efd/high_cadence_efd.ipynb
+++ b/experiments/efd/high_cadence_efd.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "efd_client = EfdClient('summit_efd')"
+    "efd_client = EfdClient('int_efd')"
    ]
   },
   {
@@ -202,6 +202,13 @@
     "p.legend.click_policy = 'hide'\n",
     "show(p)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -220,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
