Refer to a single place to give help with docs

--- a/efd_examples/Accessing_EFD_data.ipynb
+++ b/efd_examples/Accessing_EFD_data.ipynb
@@ -12,8 +12,9 @@
    "metadata": {},
    "source": [
     "In this notebook we demonstrate the LSST EFD client.\n",
+    "The client docs can be found [here](https://efd-client.lsst.io).\n",
     "\n",
-    "This is complementaty to the [Chronograf](https://test-chronograf-efd.lsst.codes) interface which we use for time-series visualization."
+    "This is complementaty to the [Chronograf](https://lsst-chronograf-int-efd.ncsa.illinois.edu/) interface which we use for time-series visualization."
    ]
   },
   {
@@ -30,9 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll access the DM-EFD instance deployed at the AuxTel lab in Tucson. You need to be on site or connected to the NOAO VPN. \n",
+    "We'll access the EFD instance deployed at the LDF.\n",
+    "You need to be on-site or connected to a VPN that cans see the LDF network.\n",
+    "See see the [docs](https://nb.lsst.io) for help logging in. \n",
     "\n",
-    "To access the EFD, you will need to put a file called `.lsst/notebook_auth.yaml` in your home directory.  It should be formatted in the following way (substituting the appropriate values, of course).  Ping Anglo or Simon on Slack (`@afausti`, `@ksk`) if you have any problem."
+    "To access the EFD, you will need to put a file called `.lsst/notebook_auth.yaml` in your home directory.\n",
+    "It should be formatted in the following way (substituting the appropriate values, of course).\n",
+    "Ping Angelo or Simon on Slack (`@afausti`, `@ksk`) if you have any problem."
    ]
   },
   {
@@ -41,9 +46,9 @@
    "source": [
     "```yaml\n",
     "test:\n",
-    "  username: \"user\"\n",
-    "  host: \"endpoint.edu\"\n",
-    "  password: \"passwd\"\n",
+    "  username: \"\"\n",
+    "  host: \"lsst-influxdb-int-efd.ncsa.illinois.edu\"\n",
+    "  password: \"\"\n",
     "```"
    ]
   },
