--- a/efd_examples/EFD_latency_characterization.ipynb
+++ b/efd_examples/EFD_latency_characterization.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# EFD latency characterization\n",
     "\n",
-    "This notebook shows how to get data from the InfluxDB API to characterize the total latency for a message from the time it is sent by SAL to the time it is written to InfluxDB."
+    "See the introductory notes in the [Accessing_EFD_data.ipynb](https://github.com/lsst-sqre/notebook-demo/blob/master/efd_examlpes/Accessing_EFD_data.ipynb) notebook for links to documentation and help with authentication."
    ]
   },
   {
