--- a/efd_examples/High_cadence_EFD_data.ipynb
+++ b/efd_examples/High_cadence_EFD_data.ipynb
@@ -11,11 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we demonstrate simple usage of the LSST EFD python client.  The client is pip installable via, e.g., `pip install lsst-efd-client`.\n",
-    "\n",
-    "This is complementaty to the [Chronograf](https://test-chronograf-efd.lsst.codes) interface which we use for time-series visualization.\n",
-    "\n",
-    "You will need `astropy` and `matplotlib` to run this notebook."
+    "See the introductory notes in the [Accessing_EFD_data.ipynb](https://github.com/lsst-sqre/notebook-demo/blob/master/efd_examlpes/Accessing_EFD_data.ipynb) notebook for links to documentation and help with authentication."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import modules and construct the client"
    ]
   },
   {
@@ -34,22 +37,6 @@
     "from bokeh.plotting import figure, output_notebook, show\n",
     "from bokeh.models import LinearAxis, Range1d\n",
     "output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll access the DM-EFD instance deployed at the AuxTel lab in Tucson. You need to be on site or connected to the NOAO VPN. \n",
-    "\n",
-    "Credentials are taken from a special file on disk.  See the readme [here](https://pypi.org/project/lsst-efd-client/) or ping `@ksk` on slack."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import modules and construct the client"
    ]
   },
   {
