--- a/efd_examples/Correlate Exposure and telemetry.ipynb
+++ b/efd_examples/Correlate Exposure and telemetry.ipynb
@@ -11,11 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we demonstrate using the LSST EFD client.\n",
-    "\n",
-    "This is complementaty to the [Chronograf](https://test-chronograf-efd.lsst.codes) interface which we use for time-series visualization.\n",
-    "\n",
-    "You'll need to install `pandas`, `astropy` and `matplotlib` to run this notebook."
+    "See the introductory notes in the [Accessing_EFD_data.ipynb](https://github.com/lsst-sqre/notebook-demo/blob/master/efd_examlpes/Accessing_EFD_data.ipynb) notebook for links to documentation and help with authentication."
    ]
   },
   {
@@ -33,27 +29,6 @@
     "from astropy.time import Time, TimeDelta\n",
     "\n",
     "from lsst_efd_client import EfdClient"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll access the DM-EFD instance deployed at the AuxTel lab in Tucson. You need to be on site or connected to the NOAO VPN. \n",
-    "\n",
-    "To access the EFD, you will need to put a file called `.lsst/notebook_auth.yaml` in your home directory.  It should be formatted in the following way (substituting the appropriate values, of course).  Ping Anglo or Simon on Slack (`@afausti`, `@ksk`) if you have any problem."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```yaml\n",
-    "test:\n",
-    "  username: \"user\"\n",
-    "  host: \"endpoint.edu\"\n",
-    "  password: \"passwd\"\n",
-    "```"
    ]
   },
   {
